IMPALA-10039: Fixed Expr-test crash caused by thread unsafe function

Recent patch for IMPALA-5746 registers a callback function for the
updating of cluster membership. The callback function cancels the
queries scheduled by the failed coordinators. This callback function
was called during Expr-test and caused crash.
This patch checks if the process running for tests and only registers
the callback function if it's not running for BE/FE tests.

Testing:
 - The issue could be reproduced by running expr-test for 10-20
   iterations. Verified the fixing by running expr-test over 1000
   iterations without crash.
 - Passed TestProcessFailures::test_kill_coordinator.
 - Passed core tests.

Change-Id: I85245bf4bffb469913d53741847e67773b7d4627
Reviewed-on: http://gerrit.cloudera.org:8080/16299
Reviewed-by: Thomas Tauber-Marshall <tmarshall@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>